--- a/about.html
+++ b/about.html
@@ -46,16 +46,13 @@
             <a class="start" href="contact.html#start">İletişim</a>
           </li>
           <li class="icons">
-            <a href="https://www.facebook.com/" class="face" target="_blank"
+            <a href="#" class="face" target="_blank"
               ><i class="fa fa-facebook"></i
             ></a>
-            <a href="https://www.youtube.com/" class="youtube" target="_blank"
+            <a href="#" class="youtube" target="_blank"
               ><i class="fa fa-youtube"></i
             ></a>
-            <a
-              href="https://www.instagram.com/hasancankose/?hl=tr"
-              class="insta"
-              target="_blank"
+            <a href="#" class="insta" target="_blank"
               ><i class="fa fa-instagram"></i
             ></a>
           </li>
@@ -136,26 +133,21 @@
         </div>
         <div class="mail">
           <img src="./images/mail.png" alt="" />
-          <p>info@robomec.com</p>
+          <p>info@robomec.com.tr</p>
         </div>
         <div class="phone">
           <img src="./images/phone.png" alt="" />
-          <p>
-            +90 507 955 12 64
-          </p>
+          <p>+90 507 955 12 64</p>
         </div>
         <div class="footer-img">
           <div class="footer-icons">
-            <a href="https://www.facebook.com/" class="face" target="_blank"
+            <a href="#" class="face" target="_blank"
               ><i class="fa fa-facebook"></i
             ></a>
-            <a href="https://www.youtube.com/" class="youtube" target="_blank"
+            <a href="#" class="youtube" target="_blank"
               ><i class="fa fa-youtube"></i
             ></a>
-            <a
-              href="https://www.instagram.com/hasancankose/?hl=tr"
-              class="insta"
-              target="_blank"
+            <a href="#" class="insta" target="_blank"
               ><i class="fa fa-instagram"></i
             ></a>
           </div>
