--- a/contact.html
+++ b/contact.html
@@ -42,14 +42,14 @@
             <a class="start" href="contact.html#start">İletişim</a>
           </li>
           <li class="icons">
-            <a href="https://www.facebook.com/" class="face" target="_blank"
+            <a href="#" class="face" target="_blank"
               ><i class="fa fa-facebook"></i
             ></a>
-            <a href="https://www.youtube.com/" class="youtube" target="_blank"
+            <a href="#" class="youtube" target="_blank"
               ><i class="fa fa-youtube"></i
             ></a>
             <a
-              href="https://www.instagram.com/hasancankose/?hl=tr"
+              href="#"
               class="insta"
               target="_blank"
               ><i class="fa fa-instagram"></i
@@ -72,7 +72,7 @@
             </div>
             <div class="contact-mail">
               <h3>E-Mail</h3>
-              <p>info@robomec.com</p>
+              <p>info@robomec.com.tr</p>
             </div>
             <div class="contact-phone">
               <h3>Telefon</h3>
@@ -104,7 +104,7 @@
         </div>
         <div class="mail">
           <img src="./images/mail.png" alt="" />
-          <p>info@robomec.com</p>
+          <p>info@robomec.com.tr</p>
         </div>
         <div class="phone">
           <img src="./images/phone.png" alt="" />
@@ -114,14 +114,14 @@
         </div>
         <div class="footer-img">
           <div class="footer-icons">
-            <a href="https://www.facebook.com/" class="face" target="_blank"
+            <a href="#" class="face" target="_blank"
               ><i class="fa fa-facebook"></i
             ></a>
-            <a href="https://www.youtube.com/" class="youtube" target="_blank"
+            <a href="#" class="youtube" target="_blank"
               ><i class="fa fa-youtube"></i
             ></a>
             <a
-              href="https://www.instagram.com/hasancankose/?hl=tr"
+              href="#"
               class="insta"
               target="_blank"
               ><i class="fa fa-instagram"></i
