--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       name="keywords"
       content="Robomec, Robomec Makine, Kalıp İçi Etiketleme Robotu, Yandan Giriş IML Robot, Üstten Giriş IML Robot, Enjeksiyon Kalıp İçi Etiketleme, Şişirme Kalıp İçi Etiketleme, Ürün Alma Robotu IML, IML Robot, BML, BML Robot, In Mold Labeling, In Mold Labeling for Blow Molding, Blow Molding Labeling, Side Entry IML Robot, Top Entry IML Robot, Take Out Robot"
     />
+    <meta name="yandex-verification" content="6363650d9b0dcf61" />
     <link rel="stylesheet" href="styles/style.css" />
     <link
       rel="stylesheet"
@@ -45,16 +46,13 @@
             <a class="start" href="contact.html#start">İletişim</a>
           </li>
           <li class="icons">
-            <a href="https://www.facebook.com/" class="face" target="_blank"
+            <a href="#" class="face" target="_blank"
               ><i class="fa fa-facebook"></i
             ></a>
-            <a href="https://www.youtube.com/" class="youtube" target="_blank"
+            <a href="#" class="youtube" target="_blank"
               ><i class="fa fa-youtube"></i
             ></a>
-            <a
-              href="https://www.instagram.com/hasancankose/?hl=tr"
-              class="insta"
-              target="_blank"
+            <a href="#" class="insta" target="_blank"
               ><i class="fa fa-instagram"></i
             ></a>
           </li>
@@ -113,9 +111,7 @@
         </div>
         <div class="top-box top-box-b">
           <img src="./images/heart.png" alt="" />
-          <p>
-            Muadillerine göre boyutsal olarak %40 daha küçük robot tasarımı
-          </p>
+          <p>Muadillerine göre boyutsal olarak %40 daha küçük robot tasarımı</p>
         </div>
         <div class="top-box top-box-c">
           <img src="./images/hand.png" alt="" />
@@ -140,26 +136,21 @@
         </div>
         <div class="mail">
           <img src="./images/mail.png" alt="" />
-          <p>info@robomec.com</p>
+          <p>info@robomec.com.tr</p>
         </div>
         <div class="phone">
           <img src="./images/phone.png" alt="" />
-          <p>
-            +90 507 955 12 64
-          </p>
+          <p>+90 507 955 12 64</p>
         </div>
         <div class="footer-img">
           <div class="footer-icons">
-            <a href="https://www.facebook.com/" class="face" target="_blank"
+            <a href="#" class="face" target="_blank"
               ><i class="fa fa-facebook"></i
             ></a>
-            <a href="https://www.youtube.com/" class="youtube" target="_blank"
+            <a href="#" class="youtube" target="_blank"
               ><i class="fa fa-youtube"></i
             ></a>
-            <a
-              href="https://www.instagram.com/hasancankose/?hl=tr"
-              class="insta"
-              target="_blank"
+            <a href="#" class="insta" target="_blank"
               ><i class="fa fa-instagram"></i
             ></a>
           </div>
