--- a/product.html
+++ b/product.html
@@ -46,16 +46,13 @@
             <a class="start" href="contact.html#start">İletişim</a>
           </li>
           <li class="icons">
-            <a href="https://www.facebook.com/" class="face" target="_blank"
+            <a href="#" class="face" target="_blank"
               ><i class="fa fa-facebook"></i
             ></a>
-            <a href="https://www.youtube.com/" class="youtube" target="_blank"
+            <a href="#" class="youtube" target="_blank"
               ><i class="fa fa-youtube"></i
             ></a>
-            <a
-              href="https://www.instagram.com/hasancankose/?hl=tr"
-              class="insta"
-              target="_blank"
+            <a href="#" class="insta" target="_blank"
               ><i class="fa fa-instagram"></i
             ></a>
           </li>
@@ -67,6 +64,7 @@
       <section class="product end">
         <div class="product-left"></div>
         <div class="product-mid">
+          <h1>Tek İstasyon Şişirme IML Robot</h1>
           <iframe
             width="100%"
             height="500"
@@ -74,6 +72,16 @@
             frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
+          ></iframe>
+          <div class="horizontal"></div>
+          <h1>Çift İstasyon Şişirme IML Robot</h1>
+          <iframe 
+          width="100%"
+          height="500"
+          src="https://www.youtube.com/embed/Lurfq1FUixU"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
           ></iframe>
         </div>
         <div class="product-right"></div>
@@ -90,26 +98,21 @@
         </div>
         <div class="mail">
           <img src="./images/mail.png" alt="" />
-          <p>info@robomec.com</p>
+          <p>info@robomec.com.tr</p>
         </div>
         <div class="phone">
           <img src="./images/phone.png" alt="" />
-          <p>
-            +90 507 955 12 64
-          </p>
+          <p>+90 507 955 12 64</p>
         </div>
         <div class="footer-img">
           <div class="footer-icons">
-            <a href="https://www.facebook.com/" class="face" target="_blank"
+            <a href="#" class="face" target="_blank"
               ><i class="fa fa-facebook"></i
             ></a>
-            <a href="https://www.youtube.com/" class="youtube" target="_blank"
+            <a href="#" class="youtube" target="_blank"
               ><i class="fa fa-youtube"></i
             ></a>
-            <a
-              href="https://www.instagram.com/hasancankose/?hl=tr"
-              class="insta"
-              target="_blank"
+            <a href="#" class="insta" target="_blank"
               ><i class="fa fa-instagram"></i
             ></a>
           </div>
