Add language selection

--- a/about.html
+++ b/about.html
@@ -30,31 +30,28 @@
         <ul>
           <li class="logo">
             <a id="mainlogo" class="start" href="index.html#start"
-              ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt=""
+              ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt="logo"
             /></a>
           </li>
           <li>
-            <a class="start" href="index.html#start">Ana Sayfa</a>
+            <a class="start tr" href="index.html#start">Ana Sayfa</a>
+            <a class="start en" style="display: none" href="index.html#start">Home</a>
           </li>
           <li>
-            <a class="start" href="about.html#start">Hakkımızda</a>
+            <a class="start tr" href="about.html#start">Hakkımızda</a>
+            <a class="start en" style="display: none" href="about.html#start">About Us</a>
           </li>
           <li>
-            <a class="start" href="product.html#start">Ürünler</a>
+            <a class="start tr" href="product.html#start">Ürünler</a>
+            <a class="start en" style="display: none" href="product.html#start">Products</a>
           </li>
           <li>
-            <a class="start" href="contact.html#start">İletişim</a>
+            <a class="start tr" href="contact.html#start">İletişim</a>
+            <a class="start en" style="display: none" href="contact.html#start">Contact</a>
           </li>
-          <li class="icons">
-            <a href="#" class="face" target="_blank"
-              ><i class="fa fa-facebook"></i
-            ></a>
-            <a href="#" class="youtube" target="_blank"
-              ><i class="fa fa-youtube"></i
-            ></a>
-            <a href="#" class="insta" target="_blank"
-              ><i class="fa fa-instagram"></i
-            ></a>
+          <li class="languages">
+              <p class="turkish">TR</p>
+              <p class="english">EN</p>
           </li>
         </ul>
       </nav>
@@ -64,7 +61,7 @@
       <section class="about end">
         <div class="left"></div>
         <div class="mid">
-          <div class="aboutcontent">
+          <div class="aboutcontent tr">
             <h1>ROBOMEC</h1>
             <br />
             <p>
@@ -99,7 +96,26 @@
               ayrıcalık kazandırmaya devam etmektedir.
             </p>
           </div>
-          <div class="mission">
+          <div class="aboutcontent en">
+            <h1>ROBOMEC</h1>
+            <br />
+            <p>
+              ROBOMEC was established within the technopark, with our team, which has 10 years of experience and knowledge in different sub-branches of the sector, came together in 2017.
+            </p>
+            <br />
+            <p>
+              Our company, which set out with the mission of providing robotic automation service to the plastic packaging manufacturing sector, works integrated with plastic injection, blow molding, injection&blow and thermoforming machines with the slogan "From Raw Material To Final Product"; It establishes customer-specific robotic systems such as In-Mold Labeling (IML-BML), Take Out, Burr Breaking, Handle Snapping, Robust-Cripple Test, Camera Control, Packaging-Palletizing.
+            </p>
+            <br />
+            <p>
+              Since customer satisfaction is always kept in the foreground as a company policy, all our R&D studies are in line with the customer expectations we have obtained as a result of our sectoral experience. In this regard, we bring the most compact and efficient robotic systems of the industry to our customers by blending our precision manufacturing and assembly techniques with the use of the highest quality components.
+            </p>
+            <br />
+            <p>
+              ROBOMEC continues to give privilege to its customers in the sector with its highly engineered robotic systems, with its young and dynamic structure, and its engineer staff with high knowledge and experience.
+            </p>
+          </div>
+          <div class="mission tr">
             <h1>Misyon</h1>
             <br />
             <p>
@@ -109,13 +125,27 @@
               müşteri memnuniyeti oluşturmak.
             </p>
           </div>
-          <div class="vision">
+          <div class="mission en">
+            <h1>Mission</h1>
+            <br />
+            <p>
+              To design and implement innovative and high-efficiency robotic automation systems for the plastic packaging manufacturing industry; To create high level customer satisfaction with our pre-sales and after-sales services.
+            </p>
+          </div>
+          <div class="vision tr">
             <h1>Vizyon</h1>
             <br />
             <p>
               Dünya genelinde plastik makine ve ambalaj imalatı sektörlerine
               hizmet veren robotlu otomasyon firmaları arasında en yenilikçi ve
               rekabetçi firmalardan biri olmak.
+            </p>
+          </div>
+          <div class="vision en">
+            <h1>Vision</h1>
+            <br />
+            <p>
+              To be one of the most innovative and competitive companies among robotic automation companies serving the plastic machinery and packaging manufacturing industries worldwide.
             </p>
           </div>
         </div>
@@ -158,5 +188,6 @@
       </footer>
     </div>
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/language.js"></script>
   </body>
 </html>
