--- a/contact.html
+++ b/contact.html
@@ -25,35 +25,29 @@
       <nav id="navbar" class="main-nav">
         <ul>
           <li class="logo">
-            <a id="mainlogo start" class="start" href="index.html#start"
-              ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt=""
+            <a id="mainlogo" class="start" href="index.html#start"
+              ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt="logo"
             /></a>
           </li>
           <li>
-            <a class="start" href="index.html#start">Ana Sayfa</a>
+            <a class="start tr" href="index.html#start">Ana Sayfa</a>
+            <a class="start en" style="display: none" href="index.html#start">Home</a>
           </li>
           <li>
-            <a class="start" href="about.html#start">Hakkımızda</a>
+            <a class="start tr" href="about.html#start">Hakkımızda</a>
+            <a class="start en" style="display: none" href="about.html#start">About Us</a>
           </li>
           <li>
-            <a class="start" href="product.html#start">Ürünler</a>
+            <a class="start tr" href="product.html#start">Ürünler</a>
+            <a class="start en" style="display: none" href="product.html#start">Products</a>
           </li>
           <li>
-            <a class="start" href="contact.html#start">İletişim</a>
+            <a class="start tr" href="contact.html#start">İletişim</a>
+            <a class="start en" style="display: none" href="contact.html#start">Contact</a>
           </li>
-          <li class="icons">
-            <a href="#" class="face" target="_blank"
-              ><i class="fa fa-facebook"></i
-            ></a>
-            <a href="#" class="youtube" target="_blank"
-              ><i class="fa fa-youtube"></i
-            ></a>
-            <a
-              href="#"
-              class="insta"
-              target="_blank"
-              ><i class="fa fa-instagram"></i
-            ></a>
+          <li class="languages">
+              <p class="turkish">TR</p>
+              <p class="english">EN</p>
           </li>
         </ul>
       </nav>
@@ -65,7 +59,8 @@
         <div class="mid-contact">
           <div class="contact-info">
             <div class="contact-adress">
-              <h3>Adres</h3>
+              <h3 class="tr">Adres</h3>
+              <h3 class="en">Address</h3>
               <p>Çifte Havuzlar Mahallesi, YTU Davutpaşa Kampüsü
               Teknopark D2 Blok Kuluçka Merkezi,
               34220 Esenler/İstanbul</p>
@@ -75,7 +70,8 @@
               <p>info@robomec.com.tr</p>
             </div>
             <div class="contact-phone">
-              <h3>Telefon</h3>
+              <h3 class="tr">Telefon</h3>
+              <h3 class="en">Phone</h3>
               <p>+90 507 955 12 64</p>
             </div>
           </div>
@@ -134,5 +130,6 @@
       </footer>
     </div>
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/language.js"></script>
   </body>
 </html>
