--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       href="https://fonts.googleapis.com/css?family=Solway&display=swap"
       rel="stylesheet"
     />
-    <title>Robomec Makine Otomasyon Kurumsal Web Sitesi</title>
+    <title class="tr">Robomec Makine Otomasyon Kurumsal Web Sitesi</title>
+    <title class="en">Robomec Machinery Automation Corporate Web Site</title>
   </head>
   <body>
     <div class="wrapper">
@@ -34,27 +35,24 @@
             /></a>
           </li>
           <li>
-            <a class="start" href="index.html#start">Ana Sayfa</a>
+            <a class="start tr" href="index.html#start">Ana Sayfa</a>
+            <a class="start en" style="display: none" href="index.html#start">Home</a>
           </li>
           <li>
-            <a class="start" href="about.html#start">Hakkımızda</a>
+            <a class="start tr" href="about.html#start">Hakkımızda</a>
+            <a class="start en" style="display: none" href="about.html#start">About Us</a>
           </li>
           <li>
-            <a class="start" href="product.html#start">Ürünler</a>
+            <a class="start tr" href="product.html#start">Ürünler</a>
+            <a class="start en" style="display: none" href="product.html#start">Products</a>
           </li>
           <li>
-            <a class="start" href="contact.html#start">İletişim</a>
+            <a class="start tr" href="contact.html#start">İletişim</a>
+            <a class="start en" style="display: none" href="contact.html#start">Contact</a>
           </li>
-          <li class="icons">
-            <a href="#" class="face" target="_blank"
-              ><i class="fa fa-facebook"></i
-            ></a>
-            <a href="#" class="youtube" target="_blank"
-              ><i class="fa fa-youtube"></i
-            ></a>
-            <a href="#" class="insta" target="_blank"
-              ><i class="fa fa-instagram"></i
-            ></a>
+          <li class="languages">
+              <p class="turkish">TR</p>
+              <p class="english">EN</p>
           </li>
         </ul>
       </nav>
@@ -65,19 +63,25 @@
         <div class="info-img"></div>
         <div>
           <h1>ROBOMEC</h1>
-          <p>
+          <p class="tr">
             Firmamız, uzun yıllar kalıp içi etiketleme (IML) teknolojisi üzerine
             tecrübe edindiği kazanım ve birikimlerini plastik şişirme sektörüne
             aktarma misyonuyla yola çıkmıştır. Bu bağlamda Türkiye’nin ilk
             plastik şişirme IML Robot firması olmanın haklı gururu ile
             projelerini hayata geçirmeye devam etmektedir.
           </p>
-          <br />
-          <p>
-            IML etiketleme teknolojisi, plastik şişe ambalaj üzerinde ürünün;
+          <p class="en">
+            Our company set out with the mission of transferring its experience and knowledge on in-mold labeling (IML) technology to the plastic blowing industry for many years. In this context, it continues to implement its projects with the rightful pride of being Turkey's first plastic blow molding IML Robot company.
           </p>
           <br />
-          <ul>
+          <p class="tr">
+            IML etiketleme teknolojisi, plastik şişe ambalaj üzerinde ürünün;
+          </p>
+          <p class="en">
+            IML labeling technology, on the plastic bottle packaging of the product;
+          </p>
+          <br />
+          <ul class="tr">
             <li>
               İmalatı esnasında yapıştırma ile etiketleme prosesinin ortadan
               kalkması,
@@ -95,32 +99,56 @@
               artırması
             </li>
           </ul>
+          <ul class="en">
+            <li>
+              Elimination of the labeling process with gluing during production,
+            </li>
+            <li>
+              Elimination of the possibility of deformation of the label of the bottle packaging,
+            </li>
+            <li>
+              The lack of air permeability of the IML label and increasing the shelf life of the product,
+            </li>
+            <li>
+              Increasing brand value by increasing production efficiency and product quality
+            </li>
+          </ul>
           <br />
-          <p>
+          <p class="tr">
             şeklinde önemli avantajları ve üreticiye kazanımları olmaktadır.
+          </p>
+          <p class="en">
+            It has important advantages and gains for the producer.
           </p>
         </div>
       </section>
       <section class="boxes">
         <div class="top-box design">
-          <p>TASARIM</p>
+          <p class="tr">TASARIM</p>
+          <p class="en">DESIGN</p>
         </div>
         <div class="top-box top-box-a">
           <img src="./images/plane.png" alt="" />
-          <p>Teleskopik (iç içe girebilen) robot kol tasarımı</p>
+          <p class="tr">Teleskopik (iç içe girebilen) robot kol tasarımı</p>
+          <p class="en">Telescopic robot arm design</p>
         </div>
         <div class="top-box top-box-b">
           <img src="./images/heart.png" alt="" />
-          <p>Muadillerine göre boyutsal olarak %40 daha küçük robot tasarımı</p>
+          <p class="tr">Muadillerine göre boyutsal olarak %40 daha küçük robot tasarımı</p>
+          <p class="en">Robot design that is 40% smaller in size than its counterparts</p>
         </div>
         <div class="top-box top-box-c">
           <img src="./images/hand.png" alt="" />
-          <p>Makine parkurunda artmış alan verimliliği</p>
+          <p class="tr">Makine parkurunda artmış alan verimliliği</p>
+          <p class="en">Increased space efficiency in the machine park</p>
+
         </div>
         <div class="top-box empty-one"></div>
         <div class="top-box top-box-d">
           <img src="./images/gear.png" alt="" />
-          <p>Muadillerine göre 2 kat fazla çalışma hızı</p>
+          <p class="tr">Muadillerine göre 2 kat fazla çalışma hızı</p>
+          <p class="en">2 times faster working speed than its counterparts</p>
+
         </div>
         <div class="top-box empty-two"></div>
       </section>
@@ -161,5 +189,6 @@
       </footer>
     </div>
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/language.js"></script>
   </body>
 </html>
