--- a/product.html
+++ b/product.html
@@ -30,31 +30,28 @@
         <ul>
           <li class="logo">
             <a id="mainlogo" class="start" href="index.html#start"
-              ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt=""
+              ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt="logo"
             /></a>
           </li>
           <li>
-            <a class="start" href="index.html#start">Ana Sayfa</a>
+            <a class="start tr" href="index.html#start">Ana Sayfa</a>
+            <a class="start en" style="display: none" href="index.html#start">Home</a>
           </li>
           <li>
-            <a class="start" href="about.html#start">Hakkımızda</a>
+            <a class="start tr" href="about.html#start">Hakkımızda</a>
+            <a class="start en" style="display: none" href="about.html#start">About Us</a>
           </li>
           <li>
-            <a class="start" href="product.html#start">Ürünler</a>
+            <a class="start tr" href="product.html#start">Ürünler</a>
+            <a class="start en" style="display: none" href="product.html#start">Products</a>
           </li>
           <li>
-            <a class="start" href="contact.html#start">İletişim</a>
+            <a class="start tr" href="contact.html#start">İletişim</a>
+            <a class="start en" style="display: none" href="contact.html#start">Contact</a>
           </li>
-          <li class="icons">
-            <a href="#" class="face" target="_blank"
-              ><i class="fa fa-facebook"></i
-            ></a>
-            <a href="#" class="youtube" target="_blank"
-              ><i class="fa fa-youtube"></i
-            ></a>
-            <a href="#" class="insta" target="_blank"
-              ><i class="fa fa-instagram"></i
-            ></a>
+          <li class="languages">
+              <p class="turkish">TR</p>
+              <p class="english">EN</p>
           </li>
         </ul>
       </nav>
@@ -64,7 +61,8 @@
       <section class="product end">
         <div class="product-left"></div>
         <div class="product-mid">
-          <h1 class="product-title">Tek İstasyon Şişirme IML Robot</h1>
+          <h1 class="product-title tr">Tek İstasyon Şişirme IML Robot</h1>
+          <h1 class="product-title en">Single Station Blow IML Robot</h1>
           <iframe
             width="100%"
             height="500"
@@ -74,7 +72,8 @@
             allowfullscreen
           ></iframe>
           <div id="horizontal"></div>
-          <h1 class="product-title">Çift İstasyon Şişirme IML Robot</h1>
+          <h1 class="product-title tr">Çift İstasyon Şişirme IML Robot</h1>
+          <h1 class="product-title en">Double Station Blow IML Robot</h1>
           <iframe 
           width="100%"
           height="500"
@@ -123,5 +122,6 @@
       </footer>
     </div>
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/language.js"></script>
   </body>
 </html>
